force-app/main/default/objects/OpenAI_Chat_Message__c/OpenAI_Chat_Message__c.object-meta.xml
<CustomObject>
    <label>OpenAI Chat Message</label>
    <nameField>
        <displayFormat>OAI-CM-{0000}</displayFormat>
        <label>OpenAI Chat Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpenAI Chat Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>