force-app/main/default/objects/OpenAI_Chat_Message__c/fields/Input_Message__c.field-meta.xml
<CustomField>
    <fullName>Input_Message__c</fullName>
    <label>Input Message</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>