force-app/main/default/objects/OpenAI_Chat_Message__c/fields/OpenAI_Chat__c.field-meta.xml
<CustomField>
    <fullName>OpenAI_Chat__c</fullName>
    <label>OpenAI Chat</label>
    <referenceTo>OpenAI_Chat__c</referenceTo>
    <relationshipLabel>OpenAI Chat Messages</relationshipLabel>
    <relationshipName>OpenAI_Chat_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>