force-app/main/default/objects/OpenAI_Chat_Message__c/fields/Output_Message__c.field-meta.xml
<CustomField>
    <fullName>Output_Message__c</fullName>
    <label>Output Message</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>